--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,99 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="../src/Assests/profile.jpg" />
+    <link rel="apple-touch-icon" href="../src/Assests/profile.jpg" />
+    <!-- Primary Meta Tags -->
+    <title>Aman Yadav - Frontend Developer Portfolio</title>
+    <meta name="title" content="Aman Yadav - Frontend Developer Portfolio" />
+    <meta name="description" content="Front-End Developer with 3+ years of experience in ReactJS, JavaScript, and UI/UX Design. View my projects and get in touch for collaboration opportunities." />
+    <meta name="keywords" content="Aman Yadav, Frontend Developer, React Developer, Web Developer, JavaScript Developer, UI/UX Designer" />
+    <meta name="author" content="Aman Yadav" />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="English" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Aman Yadav - Frontend Developer Portfolio" />
+    <meta property="og:description" content="Front-End Developer with 3+ years of experience in ReactJS, JavaScript, and UI/UX Design. View my projects and get in touch for collaboration opportunities." />
+    <meta property="og:image" content="" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:title" content="Aman Yadav - Frontend Developer Portfolio" />
+    <meta property="twitter:description" content="Front-End Developer with 3+ years of experience in ReactJS, JavaScript, and UI/UX Design. View my projects and get in touch for collaboration opportunities." />
+
+    <!-- Canonical URL -->
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link 
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" 
+      rel="stylesheet"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <!-- Theme Color for browser -->
+    <meta name="theme-color" content="#2563eb" />
+    
+    <!-- JSON-LD for rich results -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Aman Yadav",
+        "url": "https://your-portfolio-url.com/",
+        "image": "https://your-portfolio-url.com/Assests/profile.jpg",
+        "sameAs": [
+          "https://github.com/AmanYadav007",
+          "https://www.linkedin.com/in/aman-yadav-9144021a3/",
+          "https://x.com/Amanyad57536099"
+        ],
+        "jobTitle": "Frontend Developer",
+        "worksFor": {
+          "@type": "Organization",
+          "name": "Accenture"
+        },
+        "description": "Front-End Developer with 3+ years of experience in ReactJS, JavaScript, and UI/UX Design."
+      }
+    </script>
+
+    <!-- Google Analytics (Optional) -->
+    <!-- Replace UA-XXXXXXXX-X with your actual Google Analytics tracking ID -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-XXXXXXXX-X"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-XXXXXXXX-X');
+    </script>
+
+    <!-- Manifest for PWA -->
+    <link rel="manifest" href="/manifest.json" />
+
+    <!-- CSS -->
+    <link href="/src/index.css" rel="stylesheet">
   </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+  <body class="bg-white dark:bg-gray-900">
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+    <script type="module" src="/src/main.jsx"></script>
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+    <!-- Preload critical images -->
+    <link 
+      rel="preload" 
+      as="image" 
+      href="/Assests/profile.jpg"
+    />
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <!-- No-JavaScript fallback -->
+    <noscript>
+      <div style="padding: 20px; text-align: center;">
+        Please enable JavaScript to view this website.
+      </div>
+    </noscript>
   </body>
 </html>
